--- a/pos_payment_terminal/i18n/fr.po
+++ b/pos_payment_terminal/i18n/fr.po
@@ -4,11 +4,11 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 8.0\n"
+"Project-Id-Version: Odoo Server 9.0c\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-04-30 10:04+0000\n"
-"PO-Revision-Date: 2015-04-30 10:04+0000\n"
-"Last-Translator: Alexis de Lattre <alexis.delattre@akretion.com>\n"
+"POT-Creation-Date: 2016-10-13 15:27+0000\n"
+"PO-Revision-Date: 2016-10-13 15:27+0000\n"
+"Last-Translator: Mathieu Vatel <mathieu@julius.fr>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,19 +31,32 @@ msgid "Journal"
 msgstr "Journal"
 
 #. module: pos_payment_terminal
-#: field:account.journal,payment_mode:0
+#: model:ir.model.fields,field_description:pos_payment_terminal.field_account_journal_payment_mode
 msgid "Payment mode"
 msgstr "Mode de paiement"
 
 #. module: pos_payment_terminal
-#: help:account.journal,payment_mode:0
+#. openerp-web
+#: code:addons/pos_payment_terminal/static/src/js/pos_payment_terminal.js:103
+#, python-format
+msgid "Please, try it again."
+msgstr "Veuillez réessayer s'il vous plait."
+
+#. module: pos_payment_terminal
+#: model:ir.model.fields,help:pos_payment_terminal.field_account_journal_payment_mode
 msgid "Select the payment mode sent to the payment terminal"
 msgstr "Sélectionner le mode de paiement envoyé au terminal de paiement"
 
 #. module: pos_payment_terminal
 #. openerp-web
-#: code:addons/pos_payment_terminal/static/src/xml/pos_payment_terminal.xml:8
+#: code:addons/pos_payment_terminal/static/src/xml/pos_payment_terminal.xml:6
 #, python-format
 msgid "Start transaction"
 msgstr "Démarrer la transaction"
 
+#. module: pos_payment_terminal
+#. openerp-web
+#: code:addons/pos_payment_terminal/static/src/js/pos_payment_terminal.js:102
+#, python-format
+msgid "Transaction error"
+msgstr "Erreur de transaction"
